--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gallery"
         tools:targetApi="31">
+
+        <service
+            android:name=".presentation.service.DataSyncService"
+            android:enabled="true"
+            android:exported="false" />
+
+<!--        <receiver-->
+<!--            android:name=".presentation.service.DataSyncReceiver"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="true"-->
+<!--            android:permission="TODO"-->
+<!--            tools:ignore="ExportedReceiver">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.example.gallery.DATA_SYNC" />-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
